Foi pro fork pelo amor de Deus

--- a/src/pages/detalhesDaTroca/detalhesDaTroca.html
+++ b/src/pages/detalhesDaTroca/detalhesDaTroca.html
@@ -42,5 +42,5 @@
     <p>{{ troca.local.endereco }}
         <button class="">Abrir endereço no mapa</button>
     </p>
-    <button class="">Aceitar troca</button>
+    <button class="">Aceitar</button>
 </ion-content>
