--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <ion-searchbar (ionInput)="pesquisar($event)"></ion-searchbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
+    <button ion-button menuToggle *ngIf="!mostrarBarraDePesquisa"><ion-icon name="menu"></ion-icon></button>
+    <ion-title *ngIf="!mostrarBarraDePesquisa">Guardiões do Bem</ion-title>
+    <ion-searchbar #searchbar (ionInput)="pesquisar($event)"
+                   *ngIf="mostrarBarraDePesquisa" 
+                   [showCancelButton]="true" 
+                   (ionCancel)="togglePesquisa()"></ion-searchbar>
+    <ion-buttons end *ngIf="!mostrarBarraDePesquisa">
+      <button ion-button icon-only (click)="togglePesquisa()"><ion-icon name="search"></ion-icon></button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
