--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -45,7 +45,7 @@
             <ul class="list-card">
               <li class="list-card-item" *ngFor="let b of troca.Beneficios" >{{ b }}</li>
             </ul>
-            <button ion-button full color="secondary">Quero ajudar</button>
+            <button ion-button full color="secondary">Me interessei</button>
           </ion-card-content>
         </ion-card>
       </button>
