retirada do cazalbé para apresentacao

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
 
 <ion-content>
     <ion-list>
-      <p> Olá {{ usuario.id + " " + usuario.nome }}</p>
+      <!--<p> Olá {{ usuario.id + " " + usuario.nome }}</p>-->
       <button ion-item *ngFor="let troca of trocas" (click)="itemSelected(troca, usuario)">
         <ion-card>
           <ion-card-header>
